New Architecture Final

--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,25 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-/coverage/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
-
-# --- AJOUTS SPECIFIQUES PYTHON & SPOTIFY ---
-
-# Variables d'environnement (TES MOTS DE PASSE !)
+# Environment variables
 .env
 
-# Cache d'authentification Spotify (Ton token d'accès)
+# Spotify cache
 .spotipyoauthcache
 
-# Environnement virtuel Python (Gros dossiers inutiles sur Git)
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environment
 venv/
-.venv/
 env/
 
-# Cache Python (Fichiers compilés inutiles)
-__pycache__/
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
